Fix bugs in navbar - Make overflow content scroll automaticly - Close the navbar on navlink click

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -15,7 +15,8 @@
 }
 
 .navbar-content {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;  
 }
